--- a/styles.css
+++ b/styles.css
@@ -1,163 +1,153 @@
 /* Navbar */
-*{
-    /* font-family: 'Noto Sans JP', sans-serif;
+* {
+  /* font-family: 'Noto Sans JP', sans-serif;
     font-family: 'Roboto', sans-serif; */
-    text-decoration: none;
-    margin: 0;
-
+  text-decoration: none;
+  margin: 0;
 }
 
-*:visited{
-    color: inherit;
+*:visited {
+  color: inherit;
 }
 
-body{
-
-    max-width: 1920px;
-    margin: auto;
+body {
+  max-width: 1920px;
+  margin: auto;
 }
 
-
-p{
-    font-family: 'Noto Sans JP', sans-serif  
+p {
+  font-family: "Noto Sans JP", sans-serif;
 }
 
-.nav-screen{
-    top: 0px;
-    z-index: 100;
-    position: fixed;
-    width: 100%;
+.nav-screen {
+  top: 0px;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
 }
 
-.nav-wrapper{
-    font-family: 'Noto Sans JP', sans-serif;
-    display: flex;
-    justify-content: space-between;
-    background-color: #03045E;
-    
-    height: 50px;
+.nav-wrapper {
+  font-family: "Noto Sans JP", sans-serif;
+  display: flex;
+  justify-content: space-between;
+  background-color: #03045e;
+
+  height: 50px;
 }
 
-.nav-logo{
-    padding-left: 1vw;
+.nav-logo {
+  padding-left: 1vw;
 }
 
-.nav-logo-img{
-    margin-top: 5px;
-    max-height:40px;
+.nav-logo-img {
+  margin-top: 5px;
+  max-height: 40px;
 }
 
-.nav-menu{
-    
-    font-size: 1.5rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    padding-top: 5px;
-    
+.nav-menu {
+  font-size: 1.5rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  padding-top: 5px;
 }
 
-.nav-menu a{
-    color: white;
-    margin-right: 50px;
+.nav-menu a {
+  color: white;
+  margin-right: 50px;
 }
 
-.nav-menu a:hover{
-    color: wheat;
+.nav-menu a:hover {
+  color: wheat;
 }
 
-.nav-button{
-padding-right: 2vw;
-padding-top: 9px;
-
+.nav-button {
+  padding-right: 2vw;
+  padding-top: 9px;
 }
 
-.nav-button button{
-    background-color: #90E0EF;
-    border: none;
-    font-size: 1.5rem;
-    padding-bottom: 20px;
-    height: 2rem;
-    width: 15vw;
-    min-width: 164px;
-    
+.nav-button button {
+  background-color: #90e0ef;
+  border: none;
+  font-size: 1.5rem;
+  padding-bottom: 20px;
+  height: 2rem;
+  width: 15vw;
+  min-width: 164px;
 }
 
-.nav-button button:hover{
-    background-color: wheat;
+.nav-button button:hover {
+  background-color: wheat;
 }
 
-.nav-mobile{
-    display: none;
+.nav-mobile {
+  display: none;
 }
 
 /* nav mobile */
 
-@media only screen and (max-width: 784px){
-.nav-screen{
+@media only screen and (max-width: 784px) {
+  .nav-screen {
     display: none;
     transition: 3s;
-}
+  }
 
-.nav-mobile{
+  .nav-mobile {
     position: fixed;
     display: block;
     width: 100%;
     z-index: 200;
+  }
 
-}
-
-.nav-mobile-wrapper{
+  .nav-mobile-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
     background-color: rgba(3, 4, 94, 0.9);
-}
+  }
 
-.nav-mobile-logo{
+  .nav-mobile-logo {
     margin-right: 10px;
-}
+  }
 
-.nav-mobile-logo img{
+  .nav-mobile-logo img {
     padding-top: 3px;
     height: 40px;
-}
+  }
 
-.nav-mobile-logo img:hover{
+  .nav-mobile-logo img:hover {
     cursor: pointer;
-}
+  }
 
-
-
-.nav-mobile-button button{
-    background-color: #90E0EF;
+  .nav-mobile-button button {
+    background-color: #90e0ef;
     border: none;
     font-size: 1rem;
     height: 2rem;
     min-width: 150px;
     margin-top: 7px;
     color: black;
-}
+  }
 
-.nav-mobile-button button:hover{
+  .nav-mobile-button button:active {
     background-color: wheat;
     color: black;
     cursor: pointer;
-}
+  }
 
-.nav-mobile-burger{
+  .nav-mobile-burger {
     z-index: 400;
     color: white;
     margin-top: 7px;
     margin-left: 10px;
-}
+  }
 
-.nav-mobile-burger i:hover{
+  .nav-mobile-burger i:hover {
     color: wheat;
     cursor: pointer;
-}
+  }
 
-#nav-mobile-drop{
+  #nav-mobile-drop {
     height: 100%;
     width: 0;
     position: fixed;
@@ -168,160 +158,199 @@ padding-top: 9px;
     overflow-x: hidden;
     transition: 1s;
     padding-top: 60px;
-}
+  }
 
-.nav-mobile-menu{ 
+  .nav-mobile-menu {
     display: flex;
     flex-direction: column;
     padding-top: 10px;
     padding-left: 10px;
-}
+  }
 
-.nav-mobile-menu a{
+  .nav-mobile-menu a {
     padding-bottom: 3vw;
     font-size: 4vw;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     color: white;
-}
+  }
 
-.nav-mobile-menu a:hover{
+  .nav-mobile-menu a:hover {
     color: wheat;
-}
+  }
 
-#close-layer{
+  #close-layer {
     display: none;
     position: fixed;
     z-index: 100;
     height: 100%;
     width: 500px;
     background-color: rgba(138, 43, 226, 0);
-}
+  }
 
-}
+  #modal-donation {
+      display: none;
+    background-color: rgba(53, 68, 99, 0.65);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+  }
 
-
-
-
-/* 1 section */
-.hero-screen{
-    background-image: url(img/hero.jpg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 1075px;
-}
-
-.hero-fact{
+  #modal-front {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    top: 21vw;
-    left: 15vw;
-    background-color: rgba(53, 68, 99, 0.65);
-    width: 33vw;
-    height: 23vw;
-}
+    font-family: "Bebas Neue", cursive;
+    background-color: brown;
+    margin-top: 30vw;
+    margin-left: 15vw;
+    height: 400px;
+    width: 70vw;
+  }
 
-.hero-fact-h1{
-    
-    background-color: #354463;
-    width: 12vw;
-    height: 3.4vw;
+  #icons-modal {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #close-icon {
+    padding-left: 60vw;
+    padding-top: 3vw;
+  }
+
+  #close-icon:active {
+    color: wheat;
+  }
+
+  #close-icon:hover {
+    cursor: pointer;
+  }
+
+  #triangle-icon {
+    padding-top: 50px;
+    padding-left: 24vw;
+  }
+
+  #modal-front h1 {
     text-align: center;
-    margin-top: 10px; 
+    padding: 50px 10vw 0 10vw;
+  }
 }
 
-.hero-fact-h1 h1{
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.5vw;
-    padding-top: 0.7vw;
+/* 1 section */
+.hero-screen {
+  background-image: url(img/hero.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 1075px;
 }
 
-.hero-fact p{
-    font-family: 'Noto Sans JP', sans-serif;
-    font-size: 3vw;
-    text-align: center;
-    color: white;
+.hero-fact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: 21vw;
+  left: 15vw;
+  background-color: rgba(53, 68, 99, 0.65);
+  width: 33vw;
+  height: 23vw;
 }
 
-.hero-quote{
-    line-height: 4vw;
-    font-size: 3vw;
-    font-family: 'Bebas Neue', cursive;
-    padding-left: 75vw;
+.hero-fact-h1 {
+  background-color: #354463;
+  width: 12vw;
+  height: 3.4vw;
+  text-align: center;
+  margin-top: 10px;
 }
 
-.hero-mobile{
-    display: none;
+.hero-fact-h1 h1 {
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5vw;
+  padding-top: 0.7vw;
+}
+
+.hero-fact p {
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 3vw;
+  text-align: center;
+  color: white;
+}
+
+.hero-quote {
+  line-height: 4vw;
+  font-size: 3vw;
+  font-family: "Bebas Neue", cursive;
+  padding-left: 75vw;
+}
+
+.hero-mobile {
+  display: none;
 }
 
 /* 1 section mobile */
 
-@media only screen and (max-width: 784px){
-    .hero-screen{
-        display: none;
-    }
+@media only screen and (max-width: 784px) {
+  .hero-screen {
+    display: none;
+  }
 
-    .hero-mobile{
-        display: flex;
-        flex-direction: column;
-        background-image: url(img/hero-mobile3.png);
-        background-size: 100%;
-        background-repeat: no-repeat;
-        height: 650px;
-        width: 100%;
-    }
+  .hero-mobile {
+    display: flex;
+    flex-direction: column;
+    background-image: url(img/hero-mobile3.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 650px;
+    width: 100%;
+  }
 
-    .hero-quote-mobile{
-        line-height: 7vw;
-        font-size: 5vw;
-        font-family: 'Bebas Neue', cursive;
-        padding-top: 30vw;
-        padding-left: 12vw;
-    }
+  .hero-quote-mobile {
+    line-height: 7vw;
+    font-size: 5vw;
+    font-family: "Bebas Neue", cursive;
+    padding-top: 30vw;
+    padding-left: 12vw;
+  }
 
-    .hero-fact-mobile{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 65vw 0 0 16vw;
-        background-color: rgba(53, 68, 99, 0.65);
-        width: 70vw;
-        height: 27vw;
-    }
-    
-    .hero-fact-h1-mobile{
-        
-        background-color: #354463;
-        width: 25vw;
-        height: 10vw;
-        text-align: center;
-        margin-top: 10px; 
-    }
-    
-    .hero-fact-h1-mobile h1{
-        color: white;
-        font-family: 'Roboto', sans-serif;
-        font-size: 4vw;
-        padding-top: 1.2vw;
-    }
-    
-    .hero-fact-mobile p{
-        font-family: 'Noto Sans JP', sans-serif;
-        font-size: 4vw;
-        text-align: center;
-        color: white;
-    }
-    
+  .hero-fact-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 65vw 0 0 16vw;
+    background-color: rgba(53, 68, 99, 0.65);
+    width: 70vw;
+    height: 27vw;
+  }
 
+  .hero-fact-h1-mobile {
+    background-color: #354463;
+    width: 25vw;
+    height: 10vw;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .hero-fact-h1-mobile h1 {
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 4vw;
+    padding-top: 1.2vw;
+  }
+
+  .hero-fact-mobile p {
+    font-family: "Noto Sans JP", sans-serif;
+    font-size: 4vw;
+    text-align: center;
+    color: white;
+  }
 }
-    
-    
 
 /* 2 section */
 
-.s2{
-    height: 400px;
-    background-color: #0077B6;
+.s2 {
+  height: 400px;
+  background-color: #0077b6;
 }
