--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
   /* font-family: 'Noto Sans JP', sans-serif;
     font-family: 'Roboto', sans-serif; */
@@ -12,7 +11,7 @@
 }
 
 body {
-  background-color: #023E8A;
+  background-color: #023e8a;
   max-width: 1920px;
   margin: auto;
 }
@@ -53,6 +52,7 @@ p {
   letter-spacing: 2px;
   text-transform: uppercase;
   padding-top: 5px;
+  padding-right: 1vw;
 }
 
 .nav-menu a {
@@ -64,12 +64,7 @@ p {
   color: wheat;
 }
 
-.nav-button {
-  padding-right: 2vw;
-  padding-top: 9px;
-}
-
-.nav-button button {
+.nav-menu button {
   background-color: #90e0ef;
   border: none;
   font-size: 1.5rem;
@@ -79,81 +74,81 @@ p {
   min-width: 164px;
 }
 
-.nav-button button:hover {
+.nav-menu button:hover {
   background-color: wheat;
+  cursor: pointer;
 }
 
 #modal-donation-screen {
-display: none;
-background-color: rgba(53, 68, 99, 0.65);
-position: fixed;
-width: 100%;
-height: 100%;
-z-index: 1000;
+  display: none;
+  background-color: rgba(53, 68, 99, 0.65);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 }
 
 #modal-front-screen {
-display: flex;
-flex-direction: column;
-align-items: center;
-font-family: "Bebas Neue", cursive;
-background-color: brown;
-margin-top: 20vw;
-margin-left: 15vw;
-height: 400px;
-width: 70vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Bebas Neue", cursive;
+  background-color: brown;
+  margin-top: 20vw;
+  margin-left: 15vw;
+  height: 400px;
+  width: 70vw;
 }
 
 #icons-modal-screen {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 #close-icon-screen {
-padding-left: 60vw;
-padding-top: 3vw;
+  padding-left: 60vw;
+  padding-top: 3vw;
 }
 
 #close-icon-screen:active {
-color: wheat;
+  color: wheat;
 }
 
 #close-icon-screen:hover {
-cursor: pointer;
+  cursor: pointer;
 }
 
 #triangle-icon-screen {
-padding-top: 50px;
-padding-left: 28vw;
+  padding-top: 50px;
+  padding-left: 28vw;
 }
 
 #modal-front-screen h1 {
-text-align: center;
-padding: 50px 10vw 0 10vw;
+  text-align: center;
+  padding: 50px 10vw 0 10vw;
 }
 
 .nav-mobile {
   display: none;
 }
 
-#nav-mobile-drop{
+#nav-mobile-drop {
   display: none;
 }
 
-#modal-donation{
+#modal-donation {
   display: none;
 }
 
 /* nav mobile */
 
 @media only screen and (max-width: 784px) {
-
   .nav-screen {
     display: none;
     transition: 3s;
   }
 
-  #nav-mobile-drop{
+  #nav-mobile-drop {
     display: block;
   }
 
@@ -254,7 +249,7 @@ padding: 50px 10vw 0 10vw;
   }
 
   #modal-donation {
-      display: none;
+    display: none;
     background-color: rgba(53, 68, 99, 0.65);
     position: fixed;
     width: 100%;
@@ -414,9 +409,6 @@ padding: 50px 10vw 0 10vw;
   }
 }
 
-
-
-
 /* 2 section */
 
 .s2 {
@@ -424,16 +416,13 @@ padding: 50px 10vw 0 10vw;
   background-color: #0077b6;
 }
 
-
-
-
 /* 4. section Slideahow */
 
 /* Slideshow container */
 .slideshow-container {
   width: 100%;
   position: relative;
-  
+
   margin-top: 100px;
 }
 
@@ -449,13 +438,21 @@ padding: 50px 10vw 0 10vw;
 }
 
 @-webkit-keyframes fadeinout {
-0% { opacity: 0; }
-100% { opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeinout {
-  0% { opacity: 0; }
-  100% { opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .fade {
@@ -465,53 +462,90 @@ padding: 50px 10vw 0 10vw;
 }
 
 @-webkit-keyframes fadeinout {
-0% { opacity: 1; }
-100% { opacity: 0;}
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeinout {
-  0% { opacity: 1; }
-  100% { opacity: 0;}
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
-
 
 /* contact */
-.contact{
-  margin-top: 100px;
-  width: 100%;
-  background-color: #03045E;
-  height: 600px;
+
+.contact {
+  margin-top: 5vh;
+  background-color: #03045e;
 }
 
-.contact-wrapper{
+.contact-form-img {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
-.contact-forms{
-  width: 50%;
+.contact-form-img img {
+  margin-right: 7vw;
+  height: 40vw;
 }
 
-.contact-forms form{
-  display: flex;
-  justify-content: space-around;
+.contact-left {
+  margin: 2vw 0 0 20vw;
 }
 
-
-.contact-forms label{
-  font-family: "Noto Sans JP", sans-serif;
+.contact-left h1 {
+  margin-left: 7vw;
+  font-family: "Roboto", sans-serif;
   color: white;
 }
 
-#firstname, #lastname, #email{
-  width: 20vw;
+.contact-left form {
+  margin-top: 3vw;
+  color: white;
+}
+
+.contact-left label {
+  text-transform: uppercase;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.contact-left input {
+  font-family: "Noto Sans JP", sans-serif;
+  border: 2px;
+  background-color: #354463;
+  color: white;
   height: 2rem;
-  margin-bottom: 30px;
+  width: 20vw;
 }
 
-
-.contact-img img{
-  margin-right: 170px;
-  max-width: 600px;
+#input-comment {
+  font-family: "Noto Sans JP", sans-serif;
+  color: whitesmoke;
+  width: 20vw;
+  border: none;
+  background-color: #354463;
+  height: 10vw;
 }
 
+#form-submit {
+  text-transform: uppercase;
+  color: black;
+  font-family: "Roboto", sans-serif;
+  background-color: #90e0ef;
+  height: 2rem;
+  border: none;
+  font-size: 1.5rem;
+}
+
+#form-submit:hover {
+  background-color: wheat;
+  cursor: pointer;
+}
