--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ textarea {
   font-size: 1.5rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-  padding-top: 5px;
+  padding-top: 8px;
   padding-right: 1vw;
 }
 
@@ -97,8 +97,51 @@ textarea {
   width: 100%;
   height: 100%;
   z-index: 300;
-  animation: 0.5s;
-  animation-name: back-opacity;
+  animation: back-opacity 0.5s;
+  -webkit-animation: back-opacity 0.5s;
+  -moz-animation: back-opacity 0.5s;
+  -o-animation: back-opacity 0.5s;
+  -ms-animation: back-opacity 0.5s;
+}
+
+@-webkit-keyframes back-opacity {
+  0% {
+    background-color: rgba(53, 68, 99, 0);
+  }
+
+  100% {
+    background-color: rgba(53, 68, 99, 0.65);
+  }
+}
+
+@-moz-keyframes back-opacity {
+  0% {
+    background-color: rgba(53, 68, 99, 0);
+  }
+
+  100% {
+    background-color: rgba(53, 68, 99, 0.65);
+  }
+}
+
+@-o-keyframes back-opacity {
+  0% {
+    background-color: rgba(53, 68, 99, 0);
+  }
+
+  100% {
+    background-color: rgba(53, 68, 99, 0.65);
+  }
+}
+
+@-ms-keyframes back-opacity {
+  0% {
+    background-color: rgba(53, 68, 99, 0);
+  }
+
+  100% {
+    background-color: rgba(53, 68, 99, 0.65);
+  }
 }
 
 @keyframes back-opacity {
@@ -121,13 +164,38 @@ textarea {
   margin-left: 15vw;
   height: 400px;
   width: 70vw;
-  animation: 0.5s;
-  animation-name: donation-slide;
+  animation: modalSlideIn 0.5s;
+  -webkit-animation: modalSlideIn 0.5s;
+  -moz-animation: modalSlideIn 0.5s;
+  -o-animation: modalSlideIn 0.5s;
+  -ms-animation: modalSlideIn 0.5s;
 }
 
-/* Donation modal animation */
+@-webkit-keyframes modalSlideIn {
+  0% {
+    transform: translateX(2000px);
+  }
+}
 
-@keyframes donation-slide {
+@-moz-keyframes modalSlideIn {
+  0% {
+    transform: translateX(2000px);
+  }
+}
+
+@-o-keyframes modalSlideIn {
+  0% {
+    transform: translateX(2000px);
+  }
+}
+
+@-ms-keyframes modalSlideIn {
+  0% {
+    transform: translateX(2000px);
+  }
+}
+
+@keyframes modalSlideIn {
   0% {
     transform: translateX(2000px);
   }
@@ -226,7 +294,7 @@ textarea {
     color: black;
   }
 
-  .nav-mobile-button button:hover{
+  .nav-mobile-button button:hover {
     cursor: pointer;
   }
 
@@ -247,7 +315,7 @@ textarea {
     cursor: pointer;
   }
 
-  .nav-mobile-burger i:active{
+  .nav-mobile-burger i:active {
     color: wheat;
   }
 
@@ -300,8 +368,51 @@ textarea {
     width: 100%;
     height: 100%;
     z-index: 1000;
-    animation: 0.5s;
-    animation-name: back-opacity;
+    animation: back-opacity 0.5s;
+    -webkit-animation: back-opacity 0.5s;
+    -moz-animation: back-opacity 0.5s;
+    -o-animation: back-opacity 0.5s;
+    -ms-animation: back-opacity 0.5s;
+  }
+
+  @-webkit-keyframes back-opacity {
+    0% {
+      background-color: rgba(53, 68, 99, 0);
+    }
+
+    100% {
+      background-color: rgba(53, 68, 99, 0.65);
+    }
+  }
+
+  @-moz-keyframes back-opacity {
+    0% {
+      background-color: rgba(53, 68, 99, 0);
+    }
+
+    100% {
+      background-color: rgba(53, 68, 99, 0.65);
+    }
+  }
+
+  @-o-keyframes back-opacity {
+    0% {
+      background-color: rgba(53, 68, 99, 0);
+    }
+
+    100% {
+      background-color: rgba(53, 68, 99, 0.65);
+    }
+  }
+
+  @-ms-keyframes back-opacity {
+    0% {
+      background-color: rgba(53, 68, 99, 0);
+    }
+
+    100% {
+      background-color: rgba(53, 68, 99, 0.65);
+    }
   }
 
   @keyframes back-opacity {
@@ -324,11 +435,38 @@ textarea {
     margin-left: 15vw;
     height: 400px;
     width: 70vw;
-    animation: 0.5s;
-    animation-name: donation-slide;
+    animation: donation-slide 0.5s;
+    -webkit-animation: donation-slide 0.5s;
+    -moz-animation: donation-slide 0.5s;
+    -o-animation: donation-slide 0.5s;
+    -ms-animation: donation-slide 0.5s;
   }
 
   @keyframes donation-slide {
+    0% {
+      transform: translateX(700px);
+    }
+  }
+
+  @-webkit-keyframes donation-slide {
+    0% {
+      transform: translateX(700px);
+    }
+  }
+
+  @-moz-keyframes donation-slide {
+    0% {
+      transform: translateX(700px);
+    }
+  }
+
+  @-o-keyframes donation-slide {
+    0% {
+      transform: translateX(700px);
+    }
+  }
+
+  @-ms-keyframes donation-slide {
     0% {
       transform: translateX(700px);
     }
@@ -418,11 +556,11 @@ textarea {
   display: none;
 }
 
-/* 1 section mobile */
+/* 1 section responsive */
 
 @media only screen and (max-width: 1340px) {
   .hero-quote {
-    padding: 200px 0 0 300px;
+    padding: 180px 0 0 300px;
   }
 
   .hero-fact {
@@ -459,26 +597,27 @@ textarea {
   .hero-quote {
     line-height: 2.7rem;
     font-size: 2rem;
-    padding: 80px 0 0 200px;
+    padding: 80px 0 0 100px;
   }
 }
 
 @media only screen and (max-width: 784px) {
   .hero-screen {
-    display: none;
-  }
-
-  .hero-mobile {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-image: url(img/hero-mobile3.png);
     background-size: 100%;
     background-repeat: no-repeat;
-    height: 150vw;
+    height: 130vw;
     width: 100%;
   }
 
-  .hero-quote-mobile {
+  .hero-wrapper {
+    display: flex;
+  }
+
+  .hero-quote {
     line-height: 7vw;
     font-size: 5vw;
     font-family: "Bebas Neue", cursive;
@@ -486,63 +625,252 @@ textarea {
     padding-left: 12vw;
   }
 
-  .hero-fact-mobile {
+  .hero-fact {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 65vw 0 0 16vw;
+    justify-content: center;
+    margin: 40vw 0 0 0;
     background-color: rgba(53, 68, 99, 0.65);
-    width: 70vw;
-    height: 27vw;
+    width: 350px;
+    height: 120px;
+    top: 0;
+    left: 0;
   }
 
-  .hero-fact-h1-mobile {
+  .hero-fact-h1 {
     background-color: #354463;
-    width: 25vw;
-    height: 10vw;
+    width: 170px;
+    height: 40px;
     text-align: center;
     margin-top: 10px;
   }
 
-  .hero-fact-h1-mobile h1 {
+  .hero-fact-h1 h1 {
     color: white;
     font-family: "Roboto", sans-serif;
-    font-size: 4vw;
+    font-size: 1.5rem;
     padding-top: 1.2vw;
   }
 
-  .hero-fact-mobile p {
+  .hero-fact p {
     font-family: "Noto Sans JP", sans-serif;
-    font-size: 4vw;
+    font-size: 1rem;
     text-align: center;
     color: white;
   }
 }
 
-/* 2 section */
 
-.s2 {
-  height: 400px;
-  background-color: #0077b6;
-}
 
 /* 4. section Slideahow */
 
-/* Slideshow container */
 .slideshow-container {
+  display: flex;
+  justify-content: center;
   width: 100%;
   position: relative;
-
   margin-top: 100px;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
+#waiting-img {
+  width: 70vw;
+}
+
 .fade {
+  -webkit-animation: fadeinout 15s linear infinite;
+  -moz-animation: fadeinout 15s linear infinite;
+  -o-animation: fadeinout 15s linear infinite;
+  -ms-animation: fadeinout 15s linear infinite;
   animation: fadeinout 15s linear infinite;
+}
+
+@-webkit-keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 0.33;
+  }
+
+  20% {
+    opacity: 0.66;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 0.33;
+  }
+
+  20% {
+    opacity: 0.66;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@-o-keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 0.33;
+  }
+
+  20% {
+    opacity: 0.66;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@-ms-keyframes fadeinout {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+    opacity: 0.33;
+  }
+
+  20% {
+    opacity: 0.66;
+  }
+
+  30% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeinout {
@@ -616,7 +944,7 @@ textarea {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
   font-weight: 500;
-  margin: 0 0 2vw 0;
+  margin: 0 0 2vw 2.5vw;
 }
 
 .contact label {
@@ -711,4 +1039,12 @@ textarea {
   .contact-img {
     display: none;
   }
+}
+
+
+/* fill */
+
+.fill {
+  height: 400px;
+  background-color: #023e8a;
 }
